--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -185,6 +185,10 @@
         margin-bottom: 50px;
         font-size: 50px;
     }
+
+    .about {
+        margin-bottom: 100px;
+    }
 }
 
 @media only screen and (max-width:768px) {
@@ -246,6 +250,7 @@
     .about_title {
         font-size: 25px;
     }
+
     .about_card1_title {
         font-size: 16px;
         line-height: 25px;
